# foxtrot

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: handlers.rs  main.rs  routes.rs
api/src/graphql/: schema.rs
common/: Cargo.toml
common/src/: config.rs
consensus/: Cargo.toml
consensus/src/: circuit.rs  main.rs  pos.rs  pow.rs  trace.rs  transition.rs
core/: Cargo.toml
core/src/: account.rs  block.rs  blockchain.rs  db.rs  lib.rs  main.rs  transaction.rs
core/tests/: block_tests.rs  blockchain_tests.rs  transaction_tests.rs
cryptography/: Cargo.toml
cryptography/src/: blake3.rs  lib.rs  main.rs  schnorr.rs
src/: main.rs  mainnet.rs  testnet.rs
zero_knowledge/: Cargo.toml
zero_knowledge/src/: air.rs  errors.rs  evaluator.rs  lib.rs  proof.rs  prover.rs  trace.rs
