[package]
name = "foxtrot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "api",
    "consensus",
    "core",
    "cryptography",
    "zero_knowledge",
    "common",
]
resolver = "2"

[dependencies]
core = { path = "./core" }
common = { path = "./common" }
zero_knowledge = { path = "./zero_knowledge" }
k256 = "0.13.3"
generic-array = "1.1.0"
typenum = "1.17.0"
rand = "0.8.5"
winter-math = "0.9.0"
blake3 = "1.5.3"
bincode = "1.3"

[[bin]]
name = "src"
path = "src/main.rs"