[package]
name = "foxtrot"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "api",
    "consensus",
    "core",
    "cryptography",
    "zero_knowledge",
    "common",
]
resolver = "2"

[dependencies]
core = { path = "./core" }
common = { path = "./common" }
zero_knowledge = { path = "./zero_knowledge" }
cryptography = { path = "./cryptography" }
generic-array = "1.1.0"
winter-math = "0.9.0"
winter-utils = "0.9.0"

[[bin]]
name = "src"
path = "src/main.rs"