[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
k256 = "0.13.3"
ecdsa = "0.16.9"
winterfell = "0.9.0"
rand_core = "0.6"
rocksdb = { version = "0.22.0", features = ["default"] }
bincode = "1.3.3"
blake3 = "1.5.3"
winter-prover = "0.9.0"
winter-verifier = "0.9.0"
winter-math = "0.9.0"
generic-array = "1.1.0"
typenum = "1.17.0"

[dependencies.cryptography]
path = "../cryptography"

[dependencies.zero_knowledge]
path = "../zero_knowledge"
