[package]
name = "zero_knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
winterfell = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
winter-crypto = "0.9"
thiserror = "1.0"
blake3 = "1.5.3"
winter-prover = "0.9.0"
winter-verifier = "0.9.0"
winter-air = "0.9.0"
winter-math = "0.9.0"
